--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
 <div style="margin: 100px;text-align: center;height: max-content;">
-  <button class="btn btn-primary" (click)="alert()">openeess</button>
+  <button class="btn btn-primary" (click)="alert()">openeessedddd</button>
 </div>
